Fix DCHECK on Android context loss.

On Android when CompositorImpl loses it's context it doesn't unregister
it's BeginFrameSource. CompositorImpl ended up re-registering the
BeginFrameSource and triggering a DCHECK. Check if we are recreating the
display and don't register BeginFrameSource.

For Android enable CaptureFromCanvas2DHandlesContextLoss and
CaptureFromOpaqueCanvas2DHandlesContextLoss again. Also enable the tests
under Chrome OS. It's only with --mus where capture is broken that the
tests fail, so add tests content_browsertests --mus filter file.

Bug: 785558
Change-Id: I6bf6a09ecbd83d82cab3141838b465dd5479dd17
Reviewed-on: https://chromium-review.googlesource.com/777685
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518022}
Former-commit-id: a60c41ce6430e5b646af58471f84e4f6b71713fe